@@ -108,8 +108,8 @@ table_sixteen=
      }
 
      "rests" = \table {
-	     "1"	"\wholerest"		-5\pt	1\pt	-1\pt	1\pt
-	     "2"	"\halfrest"		-5\pt	1\pt	-1\pt	1\pt
+	     "1"	"\wholerest"		0\pt	6\pt	0\pt	2\pt
+	     "2"	"\halfrest"		0\pt	6\pt	-2\pt	0\pt
 	     "4"	"\quartrest"		-5\pt	2\pt	-5\pt	5\pt
 	     "8"	"\eighthrest"		0\pt	5\pt	0\pt	8\pt
 	     "16"	"\sixteenthrest"		0\pt	6\pt	0\pt	12\pt
